# spider-clnt

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/spider_clnt/: client.py  common.py  mta.py  sms.py
src/spider_clnt/commands/: spdrmta.py  spdrsms.py
src/spider_clnt/tests/: test_mta.py  test_sms.py
